--- a/src/components/PlayerCard/style.css
+++ b/src/components/PlayerCard/style.css
@@ -4,7 +4,7 @@
   height: 325px;
   margin: 1rem;
   position: relative;
-  width: 325px;
+  width: 265px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
 }
@@ -13,10 +13,10 @@
   height: 60%;
   overflow: hidden;
   text-align: center;
-  background:#6CADDC;
+  background: #6caddc;
 }
 .card > .img-container > img {
-  width: 60%
+  width: 60%;
 }
 
 .card > .content {
